<resources>
    <string name="app_name">HoroscopeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="string_characters" translatable="false">ABCÇDEFGĞHIİJKLMNOÖPQRSŞTUÜVWXYZ abcçdefgğhiıjklmnoöpqrsştuüvwxyz</string>
    <string name="tarot" translatable="false">Tarot</string>
    <string name="moon_sing">Moon Sign</string>
    <string name="sun_sign">Sun Sign</string>
    <string name="rising_sign">Rising Sign</string>
    <string name="name_fortune">Name Fortune</string>
    <string name="result">Result</string>
    <string name="own">Own</string>
    <string name="single">Single</string>
    <string name="calculate">Calculate</string>
    <string name="match">Match</string>
    <string name="your_name">Your Name</string>
    <string name="partner_name">Partner Name</string>
    <string name="show_sign_detail">Show Sign Detail</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="time_of_birth">Time of Birth</string>
    <string name="login_header_first_part">Hello, this is your personal\n astrologer</string>
    <string name="login_header_second">AstroScope</string>
    <string name="business">Business</string>
    <string name="love">Love</string>
    <string name="love_with_ratio">Love-%s</string>
    <string name="sex_with_ratio">Sex-%s</string>
    <string name="friendship_with_ratio">Friendship-%s</string>
    <string name="numbers_of_the_day">Numbers of the day</string>
    <string name="please_fill_the_all_blanks">Please fill the all blanks</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="request_time_out">Request time out</string>
    <string name="explore_the_horoscopes">EXPLORE THE HOROSCOPES</string>
    <string name="save_changes">Save Changes</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="choose">Choose</string>
    <string name="explore_the_chinese_horoscopes">EXPLORE THE CHINESE HOROSCOPES</string>
    <string name="monthly_horoscope">Monthly Horoscope</string>
    <string name="sign_in">Sign In</string>
    <string name="your_sign_and_gender">Your sign and gender</string>
    <string name="partner_gender">Partner Gender</string>
    <string name="select_zodiac_sign">Select zodiac sign</string>
    <string name="check_compatibility">Check compatibility</string>
    <string name="name">Name</string>
    <string name="gender">gender</string>
    <string name="personal_details">Personal Details</string>
    <string name="log_out">LOG OUT</string>
    <string name="home">Home</string>
    <string name="horoscope">Horoscope</string>
    <string name="profile">Profile</string>
    <string name="partner_sign">Partner Sign</string>
    <string name="language">Language</string>
    <string name="tarot_item_count_error">Please select 3 item!</string>
    <string name="choose_three_card">Choose 3 cards</string>

    <string-array name="feelings">
        <item>@string/man</item>
        <item>@string/woman</item>
    </string-array>
</resources>