<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1C1A35"
        android:paddingVertical="20dp"
        tools:context=".ui.calculatesign.CalculateRisingSignFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_birthdate_user_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_regular"
                android:letterSpacing="0.14"
                android:text="@string/date_of_birth"
                android:textAllCaps="true"
                android:textColor="#9997FF"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/et_birthdate_user_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:paddingVertical="20dp"
                android:paddingStart="13dp"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_birthdate_user_birthday" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_time_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_date_of_birth">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_birth_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_regular"
                android:letterSpacing="0.14"
                android:text="@string/time_of_birth"
                android:textAllCaps="true"
                android:textColor="#9997FF"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/et_user_birth_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:paddingVertical="20dp"
                android:paddingStart="13dp"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_birth_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/bg_personal_detail_button"
            android:fontFamily="@font/poppins_regular"
            android:padding="5dp"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_time_of_birth"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>