<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="player"
            type="com.eray.horoscopeapp.ui.match.adapter.OtherHoroscope" />

        <variable
            name="otherPlayer"
            type="com.eray.horoscopeapp.ui.match.adapter.OtherHoroscope" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/general_app_color"
        tools:context=".ui.match.MatchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_your_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:background="@drawable/bg_app_cornered"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_horoscope"
                loadImage="@{player.horoscope.imageUrl}"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_marginStart="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_horoscope_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/your_sign_and_gender"
                android:textColor="#818C99"
                android:textSize="13sp"
                app:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toEndOf="@id/iv_horoscope"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_your_horoscope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{player.horoscope.name}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toEndOf="@id/iv_horoscope"
                app:layout_constraintTop_toBottomOf="@id/tv_horoscope_title"
                tools:text="Cancer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_other_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/bg_app_cornered"
            android:paddingVertical="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_your_sign">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_horoscope_player"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_marginStart="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{otherPlayer.horoscope.imageUrl}"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_horoscope_title_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/partner_sign"
                android:textColor="#818C99"
                android:textSize="13sp"
                app:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toEndOf="@id/iv_horoscope_player"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_horoscope_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{otherPlayer.horoscope.name}"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:fontFamily="@font/poppins_regular"
                app:layout_constraintStart_toEndOf="@id/iv_horoscope_player"
                app:layout_constraintTop_toBottomOf="@id/tv_horoscope_title_player"
                tools:text="Cancer" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="28dp"
                android:src="@drawable/ic_arrow_right_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_partner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_other_sign">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_gender_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="26dp"
                android:text="@string/partner_gender"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:fontFamily="@font/poppins_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_female"
                android:paddingHorizontal="17dp"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_gender_exp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_female_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_woman"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/woman"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:fontFamily="@font/poppins_regular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_female_gender" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:background="@drawable/bg_female"
                android:paddingHorizontal="24dp"
                android:paddingVertical="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cl_female"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_male_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_man"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/man"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:fontFamily="@font/poppins_regular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_male_gender" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check_compability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_personal_detail_button"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/check_compatibility"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/cl_partner_gender" />

        <com.appodeal.ads.MrecView
            android:id="@+id/appodealMrecView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_check_compability" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>